exercisis de taules i funcions

--- a/exercicis/exfuncions.html
+++ b/exercicis/exfuncions.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercicis Taules</title>
+    <title>Exercicis Funcions</title>
 </head>
 <body>
-    <h1>Exercicis Taules </h1>
+    <h1>Exercicis Funcions </h1>
     <p id="resposta"></p>
-    <script src="extaules.js"></script>
+    <script src="exfuncions.js"></script>
 </body>
-</html> 
+</html>
